trying to fix scrollbar bug

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -818,7 +818,7 @@ picture {
 }
 
 .products-item {
-  overflow: hidden;
+  overflow-x: hidden;
   display: block;
   color: $white-color;
   font-family: $secondary-font;
